Refine indicator family analysis workflow